--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ header span {
 				height: 100vh;
 				overflow: hidden;
 				background-color: black;
-				background-image: url('../img/pexels-jakub-novacek-924824-min.jpg');
+				background-image: url('pexels-jakub-novacek-924824-min.jpg');
 				background-size: cover;
 				background-position: center;
 				background-repeat: no-repeat;
@@ -190,7 +190,6 @@ header span {
 
 .hero .hero-content {
 				padding: 0.8rem;
-				background-color: red;
 }
 
 
@@ -353,7 +352,7 @@ transform: rotate(-45deg) translate(-15px, 12px);
 				margin-top: -90px;
 				padding-bottom: 90px;
 				display: block;
-				background-color: blue;
+				
 }
 
 .layout p {
