--- a/styles.css
+++ b/styles.css
@@ -407,6 +407,8 @@ footer img {width: 1.2rem;}
 
 /* about me */
 
+.content-about {height: 100vh;
+
 .card {
 				margin: 2rem 2rem;
 				border: 0.3rem solid white;
