--- a/styles.css
+++ b/styles.css
@@ -448,7 +448,7 @@ footer img {width: 1.2rem;}
 				line-height: 1.2;
 }
 
-.card  .uru {
+h5 .uru {
 				margin-left: 0.1rem;
 				width: 1.2rem;
 				border: none;
