--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,10 @@ header span {
 				100% {opacity: 1;}
 }
 
-.hero .hero-content {padding: 0.8rem;}
+.hero .hero-content {
+				padding: 0.8rem;
+				background-color: red;
+}
 
 
 .hero .hero-content h2 {
@@ -350,6 +353,7 @@ transform: rotate(-45deg) translate(-15px, 12px);
 				margin-top: -90px;
 				padding-bottom: 90px;
 				display: block;
+				background-color: blue;
 }
 
 .layout p {
@@ -407,7 +411,7 @@ footer img {width: 1.2rem;}
 
 /* about me */
 
-
+.content-about {height: 100vh;}
 
 .card {
 				margin: 2rem 2rem;
@@ -448,7 +452,7 @@ footer img {width: 1.2rem;}
 				line-height: 1.2;
 }
 
-h5 .uru {
+.card  img[alt="icon-flang"] {
 				margin-left: 0.1rem;
 				width: 1.2rem;
 				border: none;
