--- a/styles.css
+++ b/styles.css
@@ -188,10 +188,7 @@ header span {
 				100% {opacity: 1;}
 }
 
-.hero .hero-content {
-				padding: 0.8rem;
-				
-}
+.hero .hero-content {padding: 0.8rem;}
 
 
 .hero .hero-content h2 {
@@ -353,7 +350,6 @@ transform: rotate(-45deg) translate(-15px, 12px);
 				margin-top: -90px;
 				padding-bottom: 90px;
 				display: block;
-				
 }
 
 .layout p {
@@ -452,7 +448,7 @@ footer img {width: 1.2rem;}
 				line-height: 1.2;
 }
 
-.card  img[alt="icon-flang"] {
+.card  .uru {
 				margin-left: 0.1rem;
 				width: 1.2rem;
 				border: none;
